src/scss/components/_components.page-navigation.scss
.c-page-navigation {
  display: flex;
  flex-direction: column;
  background-color: $color-page-head-background;
  padding: $global-spacing-unit;
  overflow: scroll;

  &__list {
    list-style: none;
    margin: 0;
    flex: 1;
  }
  &__list-item {
    margin-left: 0;
  }

  &__link {
    display: block;
    color: $color-menu-item;
    padding: $global-spacing-unit $global-spacing-unit-small;
    @include font-family(accent);
    @include font-size($font-size-h3);
    @include font-weight(normal);
    text-transform: uppercase;

    &:first-child {
      margin-top: $global-spacing-unit * -1;
    }

    @at-root {
      a#{&} {
        @include hocus {
          text-decoration: none;
          color: $color-menu-item-hover;
        }
      }
    }
  }

  // Second level
  &__list &__list &__link {
    @include font-size($font-size-h4);

    &:before {
      content: '- ';
    }
  }
  &__list &__list {
    list-style: disc;
  }

  &__logo {
    max-width: 60%;
    height: auto;
  }
}

